k8s/event-service-service.yml
apiVersion: v1
kind: Service
metadata:
  name: event-service
spec:
  selector:
    app: event-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
